Added Test and Azure function projects. Corrected API project name

--- a/AbestoMediaToolKit/Views/_ViewImports.cshtml
+++ b/AbestoMediaToolKit/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using AbestoMediaToolKit
-@using AbestoMediaToolKit.Models
+﻿@using Abesto.MediaToolKit.API
+@using Abesto.MediaToolKit.API.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
