Changes for logging to file, resize, Call from UI end to end workflow intergrated

--- a/AbestoMediaToolKit/Views/Home/Index.cshtml
+++ b/AbestoMediaToolKit/Views/Home/Index.cshtml
@@ -34,8 +34,8 @@
             </div>
 
             <div class="form-group">
-                <label for="filePrefix">Name Prefix for Modified File:</label>
-                <input type="text" class="form-control" name="filePrefix" id="filePrefix" value="_thumb" placeholder="Enter prefix">
+                <label for="fileSuffix">Name Suffix for Modified File:</label>
+                <input type="text" class="form-control" name="fileSuffix" id="fileSuffix" value="_thumb" placeholder="Enter suffix">
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
